--- a/sentinel-ai-extension/extension/html/popup.html
+++ b/sentinel-ai-extension/extension/html/popup.html
@@ -60,7 +60,7 @@
 
           <div class="confidence-section">
             <div class="label-row">
-              <span class="label">Confiança da análise</span>
+              <span class="label">Probabilidade de Risco</span>
               <span id="confidenceValue" class="badge info">0%</span>
             </div>
 
